tests/expectations/compiler/array/array_variable_access_fail.out
Error [ECMP0376009]: This array index could not be determined at compile time.
    --> compiler-test:4:18
     |
   4 |         return a[index];
     |                  ^^^^^
